--- a/tasks/run_in_docker.yml
+++ b/tasks/run_in_docker.yml
@@ -13,7 +13,7 @@
           ports:
             - "127.0.0.1:{{ blackbox_exporter_host_port }}:{{ blackbox_exporter_host_port }}"
           volumes:
-            - {{ blackbox_exporter_config_dir }}:/config
+            - "{{ blackbox_exporter_config_dir }}:/config"
           hostname: "{{ ansible_host }}"
           restart: always
           labels: "{{ blackbox_exporter_docker_labels }}"
