--- a/tasks/run_in_docker.yml
+++ b/tasks/run_in_docker.yml
@@ -34,12 +34,26 @@
         name: "pip"
         state: latest
         executable: pip3
+      when:
+        - ansible_distribution == "ubuntu"
+        - ansible_distribution_major_version != 24
 
     - name: Install jsondiff from pip
       pip:
         name: "jsondiff"
         state: present
         executable: pip3
+      when:
+        - ansible_distribution == "ubuntu"
+        - ansible_distribution_major_version != 24
+
+    - name: Ensure jsondiff
+      package:
+        name: "python3-jsondiff"
+        state: present
+      when:
+        - ansible_distribution == "ubuntu"
+        - ansible_distribution_major_version == 24
 
     - name: Add modules to config
       set_fact:
