--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 blackbox_exporter_config_dir: /var/lib/blackbox_exporter
 blackbox_exporter_run_in_docker: false
 blackbox_exporter_docker_network_name: prom_network
+blackbox_exporter_network_mode: none
 blackbox_exporter_container_name: blackbox_exporter
 blackbox_exporter_docker_image: "prom/blackbox-exporter:v0.18.0"
 blackbox_exporter_docker_labels:
