fix blackbox_exporter_docker_labels format

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,9 +6,9 @@ blackbox_exporter_network_mode: none
 blackbox_exporter_container_name: blackbox_exporter
 blackbox_exporter_docker_image: "prom/blackbox-exporter:v0.18.0"
 blackbox_exporter_docker_labels:
-  - prometheus
-  - exporter
-  - blackbox_exporter
+  prometheus: ""
+  exporter: ""
+  blackbox_exporter: ""
 blackbox_exporter_host_port: 9115
 blackbox_exporter_host_address: 127.0.0.1
 blackbox_exporter_version: '0.18.0'
